--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Practice all frontend concepts, asynchronous Js, Sass, Webpack etc...",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server --config webpack.dev.js --open"
   },
   "repository": {
     "type": "git",
