--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0"
   }
 }
